# FreeRDP

./: .clang-format  CMakeLists.txt  conanfile.py  config.h.in
channels/audin/client/: CMakeLists.txt  audin_main.c
channels/client/: addin.c
channels/cliprdr/: cliprdr_common.c
channels/cliprdr/client/: cliprdr_main.c
channels/cliprdr/server/: cliprdr_main.c
channels/disp/server/: disp_main.c
channels/drdynvc/client/: drdynvc_main.c
channels/drive/client/: drive_file.c  drive_main.c
channels/encomsp/client/: encomsp_main.c
channels/geometry/client/: geometry_main.c
channels/parallel/client/: parallel_main.c
channels/printer/client/: printer_cups.c  printer_main.c  printer_main.h
channels/rail/client/: rail_main.c  rail_main.h  rail_orders.c
channels/rail/server/: rail_main.c
channels/rdpear/: CMakeLists.txt
channels/rdpear/common/: CMakeLists.txt  ndr.c  rdpear_asn1.c  rdpear_common.c
channels/rdpear/common/rdpear-common/: ndr.h  rdpear_asn1.h  rdpear_common.h
channels/rdpear/common/test/: CMakeLists.txt  TestNdr.c  TestNdrEar.c
channels/server/: channels.c
client/Android/: android_freerdp.c
client/Mac/: MRDPView.m
client/SDL/: CMakeLists.txt  sdl_channels.c  sdl_clipboard.c  sdl_clipboard.h  sdl_dialogs.c  sdl_dialogs.h  sdl_disp.c  sdl_disp.cpp  sdl_disp.h  sdl_freerdp.c  sdl_freerdp.cpp  sdl_freerdp.h  sdl_input.c  sdl_input.h  sdl_kbd.cpp  sdl_monitor.c  sdl_monitor.cpp  sdl_pointer.cpp  sdl_select.c  sdl_select.h  sdl_touch.cpp  sdl_types.h  sdl_utils.c  sdl_utils.cpp  sdl_utils.h  sdl_utils.hpp  sdl_widget.c  sdl_widget.h  sdl_window.cpp  sdl_window.hpp
client/SDL/aad/: CMakeLists.txt
client/SDL/aad/qt/: webview_impl.cpp
client/SDL/aad/wrapper/: webview_impl.cpp
client/SDL/common/aad/: CMakeLists.txt
client/SDL/common/aad/wrapper/: webview.h  webview_impl.cpp
client/Sample/: freerdp.c  tf_channels.c
client/Wayland/: wlf_channels.c  wlf_cliprdr.c  wlf_disp.c  wlf_pointer.c  wlfreerdp.c
client/Windows/: wf_channels.c  wf_client.c  wf_client.h  wf_event.c  wf_gdi.c  wf_gdi.h
client/X11/: CMakeLists.txt  xf_channels.c  xf_client.c  xf_cliprdr.c  xf_disp.c  xf_event.c  xf_floatbar.c  xf_gdi.c  xf_gfx.c  xf_graphics.c  xf_input.c  xf_keyboard.c  xf_rail.c  xf_tsmf.c  xf_video.c  xf_window.c  xfreerdp.h
client/common/: client.c  client_cliprdr_file.c  client_rails.c  cmdline.c  cmdline.h  file.c
cmake/: ConfigOptions.cmake  ConfigureRPATH.cmake  ExternalProjectWebview.cmake  FindGSSAPI.cmake  FindKRB5.cmake  GenerateManpages.cmake  InstallFreeRDPMan.cmake
docs/: README.android  README.timezones
include/: CMakeLists.txt
include/config/: config.h.in
include/freerdp/: api.h  assistance.h  autodetect.h  certificate.h  client.h  codecs.h  constants.h  display.h  dvc.h  event.h  freerdp.h  graphics.h  input.h  log.h  message.h  peer.h  primitives.h  rail.h  scancode.h  secondary.h  settings.h  settings_types.h  settings_types_private.h  transport_io.h  types.h  update.h  window.h
libfreerdp/: CMakeLists.txt
libfreerdp/cache/: bitmap.c  palette.c  persistent.c  pointer.c
libfreerdp/codec/: CMakeLists.txt  bitmap.c  clear.c  color.c  dsp.c  dsp_fdk_aac.c  dsp_fdk_impl.c  dsp_fdk_impl.h  dsp_ffmpeg.c  h264.c  h264.h  h264_ffmpeg.c  h264_openh264.c  interleaved.c  jpeg.c  mppc.c  ncrush.c  nsc.c  nsc_encode.c  nsc_sse2.c  planar.c  progressive.c  progressive.h  region.c  rfx.c  rfx_decode.c  rfx_dwt.c  rfx_encode.c  rfx_quantization.c  rfx_rlgr.c  rfx_sse2.c  rfx_types.h  yuv.c  zgfx.c
libfreerdp/codec/neon/: nsc_neon.c  rfx_neon.c
libfreerdp/codec/sse/: rfx_sse2.c
libfreerdp/codec/test/: TestFreeRDPCodecClear.c  TestFreeRDPCodecInterleaved.c  TestFreeRDPCodecPlanar.c  TestFreeRDPCodecProgressive.c  TestFreeRDPCodecRemoteFX.c  TestFreeRDPCodecZGfx.c  TestFreeRDPRegion.c
libfreerdp/common/: addin.c  assistance.c  settings.c  settings_getters.c  settings_str.c  settings_str.h
libfreerdp/core/: CMakeLists.txt  aad.c  autodetect.c  capabilities.c  capabilities.h  certificate.c  client.c  codecs.c  connection.c  credssp_auth.c  fastpath.c  freerdp.c  gcc.c  heartbeat.c  info.c  input.c  license.c  listener.c  multitransport.c  multitransport.h  nego.c  nla.c  nla.h  orders.c  peer.c  proxy.c  rdp.c  rdstls.c  redirection.c  security.c  security.h  server.c  server.h  settings.c  settings.h  smartcardlogon.c  surface.c  tcp.c  tcp.h  tpdu.c  (+6 more)
libfreerdp/crypto/: base64.c  ber.c  certificate.c  crypto.c  der.c  er.c  per.c  privatekey.c  tls.c  x509_utils.c
libfreerdp/gdi/: gdi.c  gfx.c  graphics.c  region.c
libfreerdp/locale/: CMakeLists.txt  keyboard.c  locale.c
libfreerdp/primitives/: CMakeLists.txt  prim_YCoCg.c  prim_YCoCg_opt.c  prim_YUV.c  prim_YUV.h  prim_YUV_opencl.c  prim_YUV_ssse3.c  prim_add.c  prim_add_opt.c  prim_alphaComp.c  prim_alphaComp_opt.c  prim_andor_opt.c  prim_colors.c  prim_colors_opt.c  prim_copy.c  prim_copy_avx2.c  prim_copy_sse.c  prim_set.c  prim_set_opt.c  prim_shift.c  prim_shift_opt.c  prim_sign_opt.c
libfreerdp/primitives/test/: TestPrimitivesAlphaComp.c  TestPrimitivesColors.c  TestPrimitivesYCoCg.c  TestPrimitivesYUV.c  prim_test.c
libfreerdp/utils/: gfx.c  http.c  passphrase.c  signal.c  smartcard_call.c  smartcard_pack.c
rdtk/: CMakeLists.txt
rdtk/librdtk/: rdtk_nine_patch.c  rdtk_resources.c  rdtk_surface.c
scripts/: TimeZones.csx  UpdateZones.csx  WindowsZones.csx  android-build.conf  bundle-mac-os.sh
server/Mac/: mf_rdpsnd.c  mf_rdpsnd.h
server/Sample/: sf_audin.c  sf_rdpsnd.c  sfreerdp.c
server/Windows/: wf_rdpsnd.c  wf_update.c  wf_update.h
server/proxy/: pf_channel.c  pf_client.c  pf_common.c  pf_common.h  pf_config.c  pf_context.c  pf_server.c
server/shadow/: shadow_audin.c  shadow_capture.c  shadow_client.c  shadow_encoder.c  shadow_encoder.h  shadow_rdpsnd.c  shadow_server.c  shadow_subsystem.c
tools/: update-settings-tests
uwac/: CMakeLists.txt
uwac/libuwac/: CMakeLists.txt  uwac-clipboard.c  uwac-display.c  uwac-input.c  uwac-priv.h  uwac-utils.h  uwac-window.c
winpr/: CMakeLists.txt  config.h.in
winpr/libwinpr/: CMakeLists.txt
(+332 files in other folders)
